add/implement an option to test with no error propagation

--- a/test/testPropagatorAnalyzer.cfg
+++ b/test/testPropagatorAnalyzer.cfg
@@ -28,6 +28,7 @@ process PROPAGATORTEST = {
 	string NtFile = "PropagatorDump.test_07.root"
 	bool noMaterialMode = false
 	bool debug = false
+	bool noErrorPropagationMode = true
     }
 
     path p = {propAna}	
