new options for testing with radX0 correction

--- a/test/testPropagatorAnalyzer.cfg
+++ b/test/testPropagatorAnalyzer.cfg
@@ -1,8 +1,8 @@
 process PROPAGATORTEST = {
 
     source = PoolSource {
-	untracked vstring fileNames = { "file:///data/slava77/cms/releases/CMSSW_0_6_0_pre2-040306/src/simevent.Pt3-36_mum.root" }
-	untracked int32 maxEvents = 100
+	untracked vstring fileNames = { "file:///somewhere/simulatedFile.root" }
+	untracked int32 maxEvents = -1
     }
   
     es_source magfield = XMLIdealGeometryESSource {
@@ -25,10 +25,11 @@ process PROPAGATORTEST = {
 
     module propAna = SteppingHelixPropagatorAnalyzer {
 	string HistogramFile = "bFieldHisto.root"
-	string NtFile = "PropagatorDump.test_07.root"
+	string NtFile = "PropagatorDump.root"
 	bool noMaterialMode = false
 	bool debug = false
-	bool noErrorPropagationMode = true
+	bool noErrorPropagationMode = false
+	bool radX0CorrectionMode = false
     }
 
     path p = {propAna}	
