add kludge parameter (trkIndOffset) for trackId matching between simHits and simTracks .. seem to be all offset by 10000 -- use it before I figure out what is the correct way

--- a/test/testPropagatorAnalyzer.cfg
+++ b/test/testPropagatorAnalyzer.cfg
@@ -18,9 +18,12 @@ process PROPAGATORTEST = {
 	string HistogramFile = "bFieldHisto.root"
 	string NtFile = "PropagatorDump.root"
 	bool noMaterialMode = false
+        int32  trkIndOffset = 10000
 	bool debug = false
 	bool noErrorPropagationMode = false
 	bool radX0CorrectionMode = false
+        bool convertFromOldDTDetId = false
+        bool testPCAPropagation = false
     }
 
     path p = {propAna}	
