--- a/test/testPropagatorAnalyzer.cfg
+++ b/test/testPropagatorAnalyzer.cfg
@@ -1,7 +1,7 @@
 process PROPAGATORTEST = {
 
     source = PoolSource {
-	untracked vstring fileNames = { "file:///somewhere/simevent.root" }
+        untracked vstring fileNames = { "file:///somewhere/simevent.root" }
 	untracked int32 maxEvents = -1
     }
   
@@ -23,13 +23,14 @@ process PROPAGATORTEST = {
 	string HistogramFile = "bFieldHisto.root"
 	string NtFile = "PropagatorDump.root"
 	bool noMaterialMode = false
-        int32  trkIndOffset = 10000
+        int32  trkIndOffset = 0
 	bool debug = false
 	bool noErrorPropagationMode = false
 	bool radX0CorrectionMode = false
         bool convertFromOldDTDetId = false
         bool testPCAPropagation = false
         bool ntupleTkHits = false
+        string g4SimName = "g4SimHits"
     }
 
     path p = {propAna}	
